--- a/app/src/main/res/layout/fragment_store_list.xml
+++ b/app/src/main/res/layout/fragment_store_list.xml
@@ -6,7 +6,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="me.robertozimek.android.storeshoppinglist.MainActivityFragment"
+                tools:context=".StoreListFragment"
                 tools:showIn="@layout/activity_main">
 
 </RelativeLayout>
