--- a/app/src/main/res/menu/menu_store.xml
+++ b/app/src/main/res/menu/menu_store.xml
@@ -2,9 +2,13 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="me.robertozimek.android.storeshoppinglist.MainActivity">
+
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:id="@+id/action_add_store"
+        android:title="@string/action_add_store"
+        android:icon="@android:drawable/ic_input_add"
+        app:showAsAction="always"
+        />
+
 </menu>
