--- a/app/src/main/res/layout/fragment_store_list.xml
+++ b/app/src/main/res/layout/fragment_store_list.xml
@@ -1,12 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context=".StoreListFragment"
-                tools:showIn="@layout/activity_main">
-
-</RelativeLayout>
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/storelist"
+    android:name="me.robertozimek.android.geo_shoppinglist.StoreListFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    app:layoutManager="LinearLayoutManager"
+    tools:context="me.robertozimek.android.storeshoppinglist.StoreListFragment"
+    tools:listitem="@layout/store_items"/>
