Add fragment to view shopping list items with photo

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">0dp</dimen>
     <dimen name="edittext_margin">16dp</dimen>
+    <dimen name="item_text_margin">5dp</dimen>
     <dimen name="button_margin">16dp</dimen>
     <dimen name="address_left_margin">20dp</dimen>
     <dimen name="address_top_margin">5dp</dimen>
