--- a/app/src/main/res/menu/menu_store.xml
+++ b/app/src/main/res/menu/menu_store.xml
@@ -3,6 +3,12 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="me.robertozimek.android.storeshoppinglist.MainActivity">
 
+    <item
+        android:id="@+id/action_map"
+        android:title="@string/show_map"
+        android:icon="@android:drawable/ic_dialog_map"
+        app:showAsAction="always"
+        />
 
     <item
         android:id="@+id/action_add_store"
